--- a/xtreme-octane/src/Components/Navbar/Navbar.css
+++ b/xtreme-octane/src/Components/Navbar/Navbar.css
@@ -5,6 +5,8 @@
 	justify-content: flex-start;
 	align-items: center;
 	z-index: 999 !important;
+	position: sticky !important;
+	top: 0;
 }
 
 .menu-bars {
