--- a/xtreme-octane/src/App.css
+++ b/xtreme-octane/src/App.css
@@ -14,7 +14,7 @@
 }
 
 body {
-	background-color: #f5f5f5 !important;
+	background-color: #161616 !important;
 	margin: 0;
 }
 
@@ -33,6 +33,9 @@ body {
 	font-size: 24px !important;
 	text-align: center !important;
 	margin: 0px 0 30px 0 !important;
+	color: #fff;
+	font-weight: 100;
+	letter-spacing: 1px;
 }
 
 .my-page-header {
@@ -47,8 +50,9 @@ body {
 
 #card-container {
 	padding: 20px !important;
-	border: 1px solid #e6edef !important;
 	margin-top: 20px !important;
+	background-color: #323131 !important;
+	border-color: #323131 !important;
 }
 
 #app-container.sidebar-open {
