events data table

--- a/xtreme-octane/src/Styles/styles.css
+++ b/xtreme-octane/src/Styles/styles.css
@@ -85,6 +85,11 @@
 	color: #fff !important;
 }
 
+.hwVeUK {
+	color: #fff !important;
+	fill: #fff !important;
+}
+
 /* Edit Event */
 .edit-event-image {
 	width: 200px;
