--- a/xtreme-octane/src/App.css
+++ b/xtreme-octane/src/App.css
@@ -55,6 +55,13 @@ body {
 	border-color: #323131 !important;
 }
 
+#card-container-edit-vehicle {
+	padding: 0 !important;
+	margin-top: 20px !important;
+	background-color: #323131 !important;
+	border-color: #323131 !important;
+}
+
 #app-container.sidebar-open {
 	margin-left: 250px;
 	transition: margin-left 0.3s ease;
