--- a/xtreme-octane/src/Styles/styles.css
+++ b/xtreme-octane/src/Styles/styles.css
@@ -12,6 +12,20 @@
 	color: #fff !important;
 }
 
+.form-control {
+	display: block;
+	width: 100%;
+	padding: 0.375rem 0.75rem;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #fff;
+	background-color: #161616 !important;
+	border: 1px solid #161616 !important;
+	appearance: none;
+	border-radius: 0.375rem;
+}
+
 /* Data table */
 
 .data-table-xo {
