Use context in progress

--- a/xtreme-octane/src/Styles/styles.css
+++ b/xtreme-octane/src/Styles/styles.css
@@ -32,6 +32,11 @@
 	width: 100% !important;
 }
 
+.kntihR {
+	background-color: #161616 !important;
+	color: #fff !important;
+}
+
 .hCBnvI,
 .fhCFWO,
 .bhoXfZ {
