--- a/xtreme-octane/src/Styles/styles.css
+++ b/xtreme-octane/src/Styles/styles.css
@@ -832,3 +832,14 @@
 #vote-check {
 	color: #007900;
 }
+
+/* Responsiveness */
+@media only screen and (max-width: 1000px) {
+	.nav-menu {
+		position: absolute !important;
+	}
+
+	#app-container.sidebar-open {
+		margin-left: 0 !important;
+	}
+}
