--- a/xtreme-octane/src/App.css
+++ b/xtreme-octane/src/App.css
@@ -1,72 +1,96 @@
 @font-face {
-	font-family: Poppins;
-	src: url(../public/Poppins-Medium.ttf);
+  font-family: Poppins;
+  src: url(../public/Poppins-Medium.ttf);
 }
 
 * {
-	font-family: "Poppins", sans-serif !important;
-	box-sizing: border-box !important;
-	margin: 0;
+  font-family: "Poppins", sans-serif !important;
+  box-sizing: border-box !important;
+  margin: 0;
 }
 
 .App {
-	text-align: center;
+  text-align: center;
 }
 
 body {
-	background-color: #161616 !important;
-	margin: 0;
+  background-color: #161616 !important;
+  margin: 0;
 }
 
 .App-logo {
-	height: 40vmin;
-	pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .card-spacing {
-	padding: 20px !important;
-	margin-top: 20px !important;
+  padding: 20px !important;
+  margin-top: 20px !important;
 }
 
 .my-card-title {
-	font-weight: 600 !important;
-	font-size: 24px !important;
-	text-align: center !important;
-	margin: 0px 0 30px 0 !important;
-	color: #fff;
-	font-weight: 100;
-	letter-spacing: 1px;
+  font-weight: 600 !important;
+  font-size: 24px !important;
+  text-align: center !important;
+  margin: 0px 0 30px 0 !important;
+  color: #fff;
+  font-weight: 100;
+  letter-spacing: 1px;
 }
 
 .my-page-header {
-	font-weight: 600 !important;
-	font-size: 24px !important;
-	text-align: left !important;
+  font-weight: 600 !important;
+  font-size: 24px !important;
+  text-align: left !important;
 }
 
 #app-container {
-	padding: 30px !important;
+  padding: 30px !important;
 }
 
 #card-container {
-	padding: 20px !important;
-	margin-top: 20px !important;
-	background-color: #323131 !important;
-	border-color: #323131 !important;
+  padding: 20px !important;
+  margin-top: 20px !important;
+  background-color: #323131 !important;
+  border-color: #323131 !important;
+  width: 100%; /* Default to a smaller screen */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  #card-container {
+    width: 70%;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  #card-container {
+    width: 50%;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  #card-container {
+    width: 30%;
+  }
 }
 
 #card-container-edit-vehicle {
-	padding: 0 !important;
-	margin-top: 20px !important;
-	background-color: #323131 !important;
-	border-color: #323131 !important;
+  padding: 0 !important;
+  margin-top: 20px !important;
+  background-color: #323131 !important;
+  border-color: #323131 !important;
 }
 
 #app-container.sidebar-open {
-	margin-left: 250px;
-	transition: margin-left 0.3s ease;
+  margin-left: 250px;
+  transition: margin-left 0.3s ease;
 }
 
 #app-container:not(.sidebar-open) {
-	transition: margin-left 0.3s ease;
+  transition: margin-left 0.3s ease;
 }
