--- a/xo-web/src/app/components/event-listings/event-listings.component.html
+++ b/xo-web/src/app/components/event-listings/event-listings.component.html
@@ -1,1 +1,12 @@
-<p class="text-white text">event-listings works!</p>
+<div class="container mx-auto p-4">
+    <div class="flex flex-wrap justify-center gap-4">
+        <div *ngFor="let event of events" class="bg-charcoal shadow-lg rounded-lg overflow-hidden w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <img [src]="returnImage(event.eventId)" alt="Event image" class="w-full h-48 object-cover">
+            <div class="p-4">
+                <h3 class="text-lg font-semibold text-white">{{ event.eventName }}</h3>
+                <p class="text-sm text-white">{{ event.eventDate | date }}</p>
+                <p class="text-white mt-2">{{ event.eventDesc }}</p>
+            </div>
+        </div>
+    </div>
+</div>
