feat: updated ui

--- a/xo-web/src/styles.scss
+++ b/xo-web/src/styles.scss
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
   background-color: black;
