feat: updated ui

--- a/xo-web/src/app/components/layout/layout.component.html
+++ b/xo-web/src/app/components/layout/layout.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
-<main class="p-6">
-  <router-outlet></router-outlet>
-</main>
+<div class="layout">
+    <app-header></app-header>
+    <main class="flex flex-1 items-center justify-center">
+        <router-outlet></router-outlet>
+    </main>
+</div>
