--- a/xo-web/src/styles.scss
+++ b/xo-web/src/styles.scss
@@ -4,5 +4,11 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
-  background-color: black;
+  background-color: white;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
