--- a/xo-web/src/app/components/event-listings/event-listings.component.html
+++ b/xo-web/src/app/components/event-listings/event-listings.component.html
@@ -1,14 +1,14 @@
 <div class="container mx-auto p-4">
     <div class="flex flex-wrap justify-center gap-4">
         <div *ngFor="let event of events"
-             class="bg-charcoal shadow-lg rounded-lg overflow-hidden w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
+             class="bg-platinum shadow-lg rounded-lg overflow-hidden w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
             <img [src]="returnImage(event.eventId)" alt="Event image" class="w-full h-48 object-cover"
                  (click)="openModal(event)">
             <div class="p-4 space-y-5">
-                <h3 class="text-lg font-semibold text-white">{{ event.eventName }}</h3>
-                <p class="text-sm text-white">Date: {{ event.eventDate | date }}</p>
-                <p class="text-white mt-2" *ngIf="event.eventDesc.length < 150">{{ event.eventDesc }}</p>
-                <p class="text-white mt-2" *ngIf="event.eventDesc.length >= 150">{{ event.eventDesc.slice(0, 150) }}...</p>
+                <h3 class="text-lg font-semibold text-black">{{ event.eventName }}</h3>
+                <p class="text-sm text-black">Date: {{ event.eventDate | date }}</p>
+                <p class="text-black mt-2" *ngIf="event.eventDesc.length < 150">{{ event.eventDesc }}</p>
+                <p class="text-black mt-2" *ngIf="event.eventDesc.length >= 150">{{ event.eventDesc.slice(0, 150) }}...</p>
                 <div class="inline-flex w-full justify-between bg-black p-2 rounded-lg">
                     <div class="block">
                         <p class="text-white">Start Destination</p>
